k8s/networkpolicy/mongodb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mongodb-network-policy
  namespace: devtrack

spec:

  podSelector:
    matchLabels:
      app: mongodb

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 27017
